// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search in RTL renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          class="w-full xl:mx-32"
        >
          <div>
            <div
              class="relative w-full h-full bg-goku flex flex-col border border-beerus transition-all [&_.moon-search-result]:top-10 [&_.moon-search-transition>.moon-search-result]:top-0 rounded-moon-s-sm"
            >
              <div
                class="flex items-center px-2 gap-2 moon-search-input"
              >
                <div>
                  <svg
                    class="pointer-events-none text-bulma text-moon-24"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M25 25L20.5871 20.5953M20.5871 20.5953C22.0303 19.1542 22.9231 17.1621 22.9231 14.9615C22.9231 10.5645 19.3586 7 14.9615 7C10.5645 7 7 10.5645 7 14.9615C7 19.3586 10.5645 22.9231 14.9615 22.9231C17.158 22.9231 19.1467 22.0336 20.5871 20.5953Z"
                      stroke="currentColor"
                      stroke-linecap="round"
                    />
                  </svg>
                </div>
                <input
                  aria-label="Search"
                  autocomplete="off"
                  class="moon-search-input py-2 px-0 border-0 w-full focus:outline-none focus:border-0 focus:ring-0 bg-transparent placeholder-bulma text-bulma text-moon-14"
                  spellcheck="false"
                  type="text"
                  value=""
                />
                <button
                  class="cursor-pointer text-trunks text-moon-14 transition transform"
                  tabindex="-1"
                  type="button"
                >
                  Clear
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        class="w-full xl:mx-32"
      >
        <div>
          <div
            class="relative w-full h-full bg-goku flex flex-col border border-beerus transition-all [&_.moon-search-result]:top-10 [&_.moon-search-transition>.moon-search-result]:top-0 rounded-moon-s-sm"
          >
            <div
              class="flex items-center px-2 gap-2 moon-search-input"
            >
              <div>
                <svg
                  class="pointer-events-none text-bulma text-moon-24"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 25L20.5871 20.5953M20.5871 20.5953C22.0303 19.1542 22.9231 17.1621 22.9231 14.9615C22.9231 10.5645 19.3586 7 14.9615 7C10.5645 7 7 10.5645 7 14.9615C7 19.3586 10.5645 22.9231 14.9615 22.9231C17.158 22.9231 19.1467 22.0336 20.5871 20.5953Z"
                    stroke="currentColor"
                    stroke-linecap="round"
                  />
                </svg>
              </div>
              <input
                aria-label="Search"
                autocomplete="off"
                class="moon-search-input py-2 px-0 border-0 w-full focus:outline-none focus:border-0 focus:ring-0 bg-transparent placeholder-bulma text-bulma text-moon-14"
                spellcheck="false"
                type="text"
                value=""
              />
              <button
                class="cursor-pointer text-trunks text-moon-14 transition transform"
                tabindex="-1"
                type="button"
              >
                Clear
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Search in RTL renders NoTransition 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="w-full xl:mx-32"
      >
        <div>
          <div
            class="relative w-full h-full bg-goku flex flex-col border border-beerus transition-all [&_.moon-search-result]:top-10 [&_.moon-search-transition>.moon-search-result]:top-0 rounded-moon-s-sm"
          >
            <div
              class="flex items-center px-2 gap-2 moon-search-input"
            >
              <div>
                <svg
                  class="pointer-events-none text-bulma text-moon-24"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 25L20.5871 20.5953M20.5871 20.5953C22.0303 19.1542 22.9231 17.1621 22.9231 14.9615C22.9231 10.5645 19.3586 7 14.9615 7C10.5645 7 7 10.5645 7 14.9615C7 19.3586 10.5645 22.9231 14.9615 22.9231C17.158 22.9231 19.1467 22.0336 20.5871 20.5953Z"
                    stroke="currentColor"
                    stroke-linecap="round"
                  />
                </svg>
              </div>
              <input
                aria-label="Search"
                autocomplete="off"
                class="moon-search-input py-2 px-0 border-0 w-full focus:outline-none focus:border-0 focus:ring-0 bg-transparent placeholder-bulma text-bulma text-moon-14"
                spellcheck="false"
                type="text"
                value=""
              />
              <button
                class="cursor-pointer text-trunks text-moon-14 transition transform"
                tabindex="-1"
                type="button"
              >
                Clear
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="w-full xl:mx-32"
    >
      <div>
        <div
          class="relative w-full h-full bg-goku flex flex-col border border-beerus transition-all [&_.moon-search-result]:top-10 [&_.moon-search-transition>.moon-search-result]:top-0 rounded-moon-s-sm"
        >
          <div
            class="flex items-center px-2 gap-2 moon-search-input"
          >
            <div>
              <svg
                class="pointer-events-none text-bulma text-moon-24"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M25 25L20.5871 20.5953M20.5871 20.5953C22.0303 19.1542 22.9231 17.1621 22.9231 14.9615C22.9231 10.5645 19.3586 7 14.9615 7C10.5645 7 7 10.5645 7 14.9615C7 19.3586 10.5645 22.9231 14.9615 22.9231C17.158 22.9231 19.1467 22.0336 20.5871 20.5953Z"
                  stroke="currentColor"
                  stroke-linecap="round"
                />
              </svg>
            </div>
            <input
              aria-label="Search"
              autocomplete="off"
              class="moon-search-input py-2 px-0 border-0 w-full focus:outline-none focus:border-0 focus:ring-0 bg-transparent placeholder-bulma text-bulma text-moon-14"
              spellcheck="false"
              type="text"
              value=""
            />
            <button
              class="cursor-pointer text-trunks text-moon-14 transition transform"
              tabindex="-1"
              type="button"
            >
              Clear
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Search renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="w-full xl:mx-32"
      >
        <div>
          <div
            class="relative w-full h-full bg-goku flex flex-col border border-beerus transition-all [&_.moon-search-result]:top-10 [&_.moon-search-transition>.moon-search-result]:top-0 rounded-moon-s-sm"
          >
            <div
              class="flex items-center px-2 gap-2 moon-search-input"
            >
              <div>
                <svg
                  class="pointer-events-none text-bulma text-moon-24"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 25L20.5871 20.5953M20.5871 20.5953C22.0303 19.1542 22.9231 17.1621 22.9231 14.9615C22.9231 10.5645 19.3586 7 14.9615 7C10.5645 7 7 10.5645 7 14.9615C7 19.3586 10.5645 22.9231 14.9615 22.9231C17.158 22.9231 19.1467 22.0336 20.5871 20.5953Z"
                    stroke="currentColor"
                    stroke-linecap="round"
                  />
                </svg>
              </div>
              <input
                aria-label="Search"
                autocomplete="off"
                class="moon-search-input py-2 px-0 border-0 w-full focus:outline-none focus:border-0 focus:ring-0 bg-transparent placeholder-bulma text-bulma text-moon-14"
                spellcheck="false"
                type="text"
                value=""
              />
              <button
                class="cursor-pointer text-trunks text-moon-14 transition transform"
                tabindex="-1"
                type="button"
              >
                Clear
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="w-full xl:mx-32"
    >
      <div>
        <div
          class="relative w-full h-full bg-goku flex flex-col border border-beerus transition-all [&_.moon-search-result]:top-10 [&_.moon-search-transition>.moon-search-result]:top-0 rounded-moon-s-sm"
        >
          <div
            class="flex items-center px-2 gap-2 moon-search-input"
          >
            <div>
              <svg
                class="pointer-events-none text-bulma text-moon-24"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M25 25L20.5871 20.5953M20.5871 20.5953C22.0303 19.1542 22.9231 17.1621 22.9231 14.9615C22.9231 10.5645 19.3586 7 14.9615 7C10.5645 7 7 10.5645 7 14.9615C7 19.3586 10.5645 22.9231 14.9615 22.9231C17.158 22.9231 19.1467 22.0336 20.5871 20.5953Z"
                  stroke="currentColor"
                  stroke-linecap="round"
                />
              </svg>
            </div>
            <input
              aria-label="Search"
              autocomplete="off"
              class="moon-search-input py-2 px-0 border-0 w-full focus:outline-none focus:border-0 focus:ring-0 bg-transparent placeholder-bulma text-bulma text-moon-14"
              spellcheck="false"
              type="text"
              value=""
            />
            <button
              class="cursor-pointer text-trunks text-moon-14 transition transform"
              tabindex="-1"
              type="button"
            >
              Clear
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Search renders NoTransition 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="w-full xl:mx-32"
      >
        <div>
          <div
            class="relative w-full h-full bg-goku flex flex-col border border-beerus transition-all [&_.moon-search-result]:top-10 [&_.moon-search-transition>.moon-search-result]:top-0 rounded-moon-s-sm"
          >
            <div
              class="flex items-center px-2 gap-2 moon-search-input"
            >
              <div>
                <svg
                  class="pointer-events-none text-bulma text-moon-24"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 25L20.5871 20.5953M20.5871 20.5953C22.0303 19.1542 22.9231 17.1621 22.9231 14.9615C22.9231 10.5645 19.3586 7 14.9615 7C10.5645 7 7 10.5645 7 14.9615C7 19.3586 10.5645 22.9231 14.9615 22.9231C17.158 22.9231 19.1467 22.0336 20.5871 20.5953Z"
                    stroke="currentColor"
                    stroke-linecap="round"
                  />
                </svg>
              </div>
              <input
                aria-label="Search"
                autocomplete="off"
                class="moon-search-input py-2 px-0 border-0 w-full focus:outline-none focus:border-0 focus:ring-0 bg-transparent placeholder-bulma text-bulma text-moon-14"
                spellcheck="false"
                type="text"
                value=""
              />
              <button
                class="cursor-pointer text-trunks text-moon-14 transition transform"
                tabindex="-1"
                type="button"
              >
                Clear
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="w-full xl:mx-32"
    >
      <div>
        <div
          class="relative w-full h-full bg-goku flex flex-col border border-beerus transition-all [&_.moon-search-result]:top-10 [&_.moon-search-transition>.moon-search-result]:top-0 rounded-moon-s-sm"
        >
          <div
            class="flex items-center px-2 gap-2 moon-search-input"
          >
            <div>
              <svg
                class="pointer-events-none text-bulma text-moon-24"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M25 25L20.5871 20.5953M20.5871 20.5953C22.0303 19.1542 22.9231 17.1621 22.9231 14.9615C22.9231 10.5645 19.3586 7 14.9615 7C10.5645 7 7 10.5645 7 14.9615C7 19.3586 10.5645 22.9231 14.9615 22.9231C17.158 22.9231 19.1467 22.0336 20.5871 20.5953Z"
                  stroke="currentColor"
                  stroke-linecap="round"
                />
              </svg>
            </div>
            <input
              aria-label="Search"
              autocomplete="off"
              class="moon-search-input py-2 px-0 border-0 w-full focus:outline-none focus:border-0 focus:ring-0 bg-transparent placeholder-bulma text-bulma text-moon-14"
              spellcheck="false"
              type="text"
              value=""
            />
            <button
              class="cursor-pointer text-trunks text-moon-14 transition transform"
              tabindex="-1"
              type="button"
            >
              Clear
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
